feat: データの精度を高めるためにスキーマを大幅修正
